--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
+    <header>
+    <nav>
+    <ul>
+        <li>Bienvenidos</li>
+        <li>Nosotros</li>
+        <li>Pizzas</li>
+        <li>Contacto</li>
+    </ul>
+</nav>
+</header>
 <h1>Prueba Nuestros Sabores Genuinos </h1>
 </body>
 </html>
