--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="imag/Logo-ilbono.jpg" alt="logo">
     <nav>
     <ul>
         <li>Bienvenidos</li>
