--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </ul>
 </nav>
 </header>
-<h1>Prueba Nuestros Sabores Genuinos </h1>
+<div>
+    <img src="imag/DSC_7083.jpg" alt="presentacion">
+</div>
 </body>
 </html>
