--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </header>
 <div>
     <img src="imag/DSC_7083.jpg" alt="presentacion">
+    <span>La Esencia de Italia en Cada Pizza</span>
 </div>
 </body>
 </html>
