--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </ul>
 </nav>
 </header>
-<div>
+<div class="bienv">
     <img src="imag/DSC_7083.jpg" alt="presentacion">
-    <span>La Esencia de Italia en Cada Pizza</span>
+    La Esencia de Italia en Cada Pizza
 </div>
 </body>
 </html>
