--- a/index.html
+++ b/index.html
@@ -22,5 +22,20 @@
     <img src="imag/DSC_7083.jpg" alt="presentacion">
     La Esencia de Italia en Cada Pizza
 </div>
+<div class="nosot">
+  <div class="columna">
+    <h2>Sobre Nosotros</h2>
+            <p>Il Bono fue fundada por Gerardo Bono, un apasionado de la pizza napolitana. Ubicada en Juana Koslay, San Luis, ofrecemos una experiencia culinaria única con ingredientes frescos y recetas tradicionales.</p>
+        </div>
+        <div class="columna">
+            <h2>Nuestras Pizzas</h2>
+            <p>Disfruta de nuestras deliciosas pizzas napolitanas, hechas con masa fermentada naturalmente y horneadas en un auténtico horno de leña. Desde la clásica Margherita hasta la especialidad de la casa,
+                 cada pizza es una obra de arte.</p>
+  </div>
+  <div class="columna">
+    <h2>Ubicación</h2>
+    <p>Nos encontramos en Juana Koslay, San Luis, Argentina. Ven a visitarnos y disfruta de un ambiente acogedor y familiar.</p>
+</div>
+</div>
 </body>
 </html>
