--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
     <p>Nos encontramos en Juana Koslay, San Luis, Argentina. Ven a visitarnos y disfruta de un ambiente acogedor y familiar.</p>
 </div>
 </div>
+<div class="catalogo">
+<h2>Catálogo</h2>
+</div>
 </body>
 </html>
