--- a/index.html
+++ b/index.html
@@ -1,25 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestro proyecto</title>
     <link rel="stylesheet" href="Estilo.css">
 </head>
+
 <body>
     <header>
-        <img src="imag/Logo-ilbono.jpg" alt="logo">
-    <nav>
-    <ul>
-        <li>Bienvenidos</li>
-        <li>Nosotros</li>
-        <li>Pizzas</li>
-        <li>Contacto</li>
-    </ul>
-</nav>
-</header>
-<div>
-    <img src="imag/DSC_7083.jpg" alt="presentacion">
+        <!-- <img src="imag/Logo-ilbono.jpg" alt="logo">-->
+
+        <div class="menu container">
+
+            <a href="#" class="logo">Menu</a>
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img class="menu-icono" src="imag/Logo-ilbono.jpg" alt="logo">
+
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Pizzas</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="header-text">
+            <h1>Sumérgete en el apasionante mundo de la gastronomía italiana con nosotros. En nuestro blog, explorarás
+                los sabores únicos y las tradiciones </h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque aperiam doloremque dolores, et officia
+                iusto magni sequi sapiente quasi obcaecati. Sapiente autem libero, suscipit eaque dicta esse nulla
+                aperiam incidunt?</p>
+            <a href="#" class="btn-1">Mas informacion</a>
+        </div>
+    </header>
+
+    <main class="services container">
+
+        <h2>Servicios1</h2>
+        <p class="txt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora dicta est quaerat quo, veniam
+            perferendis,
+            maxime dolore, veritatis nobis quos magnam ex accusantium sed neque pariatur similique obcaecati corporis!
+            Corporis.</p>
+
+        <div class="group-services">
+            <div class="service">
+                <img src="imag/1" alt="">
+                <h3>servicio1</h3>
+                <p>Lorem ipsum, dolor sit </p>
+            </div>
+
+            <div class="group-services">
+                <div class="service">
+                    <img src="imag/1" alt="">
+                    <h3>servicio2</h3>
+                    <p>Lorem ipsum, dolor sit </p>
+                </div>
+
+
+                <div class="group-services">
+                    <div class="service">
+                        <img src="imag/1" alt="">
+                        <h3>servicio3</h3>
+                        <p>Lorem ipsum, dolor sit </p>
+                    </div>
+
+                </div>
+
+    </main>
+
+    <section class="portafolio container">
+        <div class="porfolio-txt">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat obcaecati repellat, earum fugit, magni
+                doloribus provident eius iusto commodi odio vel iste incidunt omnis sapiente pariatur ratione
+                reiciendis! Laudantium, perferendis?</p>
+
+        </div>
+        <div class="img">
+            <img src="img" alt="">
+            <img src="img" alt="">
+        </div>
+        <a href="#" class="btn-1">mas informacion</a>
+    </section>
+
+<section class="bg-sec">
+    <div class="bg-txt-container">
+        <h2>informacion</h2>
+        <p>Lorem ipsum dolor sit amet .</p>
+    </div>
+</section>
+
+<section class="prices container">
+    <div class="price">
+
+        <h3>$1.500</h3>
+        <ul>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+        </ul>
+        <a href="#" class="btn-1">Mas informacion</a>
+    </div>
+
+
+    <div class="price">
+        
+        <h3>$3.100</h3>
+        <ul>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+        </ul>
+        <a href="#" class="btn-1">Mas informacion</a>
+    </div>
+
+
+
+    <div class="price">
+        
+        <h3>$2.400</h3>
+        <ul>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+        </ul>
+        <a href="#" class="btn-1">Mas informacion</a>
+    </div>
+
+</section>
+
+    <div>
+        <img src="imag/DSC_7083.jpg" alt="presentacion">
+    </div>
+
+    <footer>
+
+    <div class="ft container">
+        <div class="enlace">
+    <h3>lorem</h3>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
 </div>
+
+<div class="enlace">
+    <h3>lorem</h3>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+</div>
+
+
+<div class="enlase">
+    <h3>lorem</h3>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+    <li><a href="#">lorem</a></li>
+</div>
+
+<div class="enlace" >
+    <h3>Email</h3>
+    <form>
+        <input type="text" class="btn-2">
+        <input type="submit" value="Enviar" class="btn-3">
+    </form>
+
+
+</div>
+    </div>
+
+    </footer>
 </body>
+
 </html>
