--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mi Primer Proyecto</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <header class="header">
@@ -15,206 +16,258 @@
             <a href="index.html" class="logo">Logo</a>
             <input type="checkbox" id="menu" />
             <label for="menu">
-                <img src="imagenes/menu.png" class="menu-icono" alt="menu">
+                <img src="imagenes/menu1.webp" class="menu-icono" alt="menu">
             </label>
-    
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="lanzamientos.html">Lanzamientos</a></li>
-            <li><a href="juegosfamiliares.html">Juegos Familiares</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-</div>
 
-    <div class="header-content container">
-        <div class="header-txt">
-            <h1>Compra tu<span>Juego</span><br>Favorito Aqui</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat nemo deleniti praesentium dolorem
-                officiis magnam, reiciendis aliquam earum fugiat porro iste, laborum tempora velit voluptates animi
-                veritatis. Sapiente, minima aperiam.
-            </p>
-         <div class="buttons">
-                 <a href="#" class="btn-1">Informacion</a>
-                 <a href="#" class="btn-1">Juegos</a>
-               
-            </div>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
+
+        <div class="header-content container">
+            <div class="header-txt">
+
+
+
+
+    </header>
+
+
+    <section class="carrusel-container">
+        <div class="carrusel">
+            <!-- Botón de navegación anterior -->
+            <button class="prev" id="prevBtn">&#10094;</button>
+
+            <!-- Contenedor de las imágenes del carrusel -->
+            <div class="carrusel-content">
+                <!-- Las imágenes se llenarán dinámicamente usando JavaScript -->
+                <img src="imagenes/carrusel1.jpg" alt="Producto 1" class="carousel-image">
+                <img src="imagenes/carrusel2.jpg" alt="Producto 2" class="carousel-image">
+                <img src="imagenes/carrusel4.webp" alt="Producto 3" class="carousel-image">
+                <img src="imagenes/carrusel90.jpg" alt="Producto 4" class="carousel-image">
+                <img src="imagenes/carrusel5.jpg" alt="Producto 5" class="carousel-image">
+                <img src="imagenes/carrusel6.jpg" alt="Producto 6" class="carousel-image">
+                <img src="imagenes/carrusel7.webp" alt="Producto 7" class="carousel-image">
+                <img src="imagenes/carrusel9.jpg" alt="Producto 8" class="carousel-image">
+            </div>
+
+            <!-- Botón de navegación siguiente -->
+            <button class="next" id="nextBtn">&#10095;</button>
+        </div>
+    </section>
+    <script src="script.js"></script>
+
+
+</body>
+
+</html>
+
+
+
+<main class="product container">
+
+    <h2>Todos los Productos</h2>
+
+    <div class="product-content">
+
+        <div class="product-1">
+            <img src="imagenes/crema contorno de ojos.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="product-1">
+            <img src="imagenes/producto1.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="product-1">
+            <img src="imagenes/carrusel13.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="product-1">
+            <img src="imagenes/promociones.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+        <div class="product-1">
+            <img src="imagenes/Crema de noche reparadora con niacinamida.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <div class="product-1">
+            <img src="imagenes/producto4.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="product-1">
+            <img src="imagenes/producto7.jpg" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="product-1">
+            <img src="imagenes/crema purificante azul.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="product-1">
+            <img src="imagenes/Hidratante diario nutritivo con escualano.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="product-1">
+            <img src="imagenes/suero reafirmante vegano.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="product-1">
+            <img src="imagenes/Crema de noche reparadora con niacinamida.webp" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="product-1">
+            <img src="imagenes/producto6.jpg" alt="">
+            <div class="product-txt">
+                <h3>The Outset</h3>
+                <div class="price">
+                    <p>$500</p>
+                    <a href="#" class="btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</main>
+
+<section class="bg-sec">
+    <div class="bg-img container">
+        <h2>Sumate a la Sensualidad de tu Mirada</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos nostrum eos laudantium sunt nisi
+            reiciendis vel delectus non atque accusantium consequuntur ea quis, numquam quisquam exercitationem? Sed
+            vitae cupiditate corrupti.
+        </p>
+    </div>
+</section>
+
+
+<section class="contact container">
+    <div class="contact-content">
+        <h3>Subscribete a nuestro blog</h3>
+        <form>
+            <input type="email" placoholder="Escribe tu correo">
+            <input type="submit" class="btn-3" value="Enviar">
+        </form>
+    </div>
+</section>
+
+
+<footer class="footer container">
+    <div class="link">
+        <a href="#" class="logo">Logo</a>
     </div>
 
+    <div class="link">
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </div>
 
-</header>
-    <section class="popular containaer">
-
-        <h2>Juegos populares</h2>
-
-        <div class="popular-content">
-            <img src="imagenes/g1.jpg" alt="">
-            <img src="imagenes/g2.jpg" alt="">
-            <img src="imagenes/g3.jpg" alt="">
-            <img src="imagenes/g4.jpg" alt="">
-            <img src="imagenes/g5.jpg" alt="">
-            <img src="imagenes/g6.jpg" alt="">
-            <img src="imagenes/g7.jpg" alt="">
-        </div>
-    </section>
-
-    <main class="product container">
-
-        <h2>Todos los juegos</h2>
-
-        <div class="product-content">
-
-            <div class="product-1">
-                <img src="imagenes/l1.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="product-1">
-                <img src="imagenes/l2.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-            <div class="product-1">
-                <img src="imagenes/l3.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-            <div class="product-1">
-                <img src="imagenes/l4.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-            <div class="product-1">
-                <img src="imagenes/l5.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-
-            <div class="product-1">
-                <img src="imagenes/l6.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-
-            <div class="product-1">
-                <img src="imagenes/l7.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-
-            <div class="product-1">
-                <img src="imagenes/l8.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-
-
-            <div class="product-1">
-                <img src="imagenes/l9.jpg" alt="">
-                <div class="product-txt">
-                    <h3>Juegos</h3>
-                    <div class="price">
-                        <p>$500</p>
-                        <a href="#" class="btn-2">Comprar</a>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </main>
-
-    <section class="contact container">
-        <div class="contact-content">
-            <h3>Subscribete a nuestro blog</h3>
-            <form>
-                <input type="email" placoholder="Escribe tu correo">
-                <input type="submit" class="btn-3" value="Enviar">
-            </form>
-        </div>
-    </section>
-
-
-    <footer class="footer container">
-        <div class="link">
-            <a href="#" class="logo">Logo</a>
-        </div>
-
-        <div class="link">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </div>
-
-    </footer>
+</footer>
 
 
 </body>
