--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
 
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Primer Proyecto</title>
+    <title>mi primer proyecto</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
+     
     <header class="header">
 
         <div class="menu container">
@@ -52,7 +51,7 @@
                 <img src="imagenes/carrusel5.jpg" alt="Producto 5" class="carousel-image">
                 <img src="imagenes/carrusel6.jpg" alt="Producto 6" class="carousel-image">
                 <img src="imagenes/carrusel7.webp" alt="Producto 7" class="carousel-image">
-                <img src="imagenes/carrusel9.jpg" alt="Producto 8" class="carousel-image">
+                <img src="imagenes/carrusel3.webp" alt="producto8" class="carousel-image">
             </div>
 
             <!-- Botón de navegación siguiente -->
@@ -60,64 +59,61 @@
         </div>
     </section>
     <script src="script.js"></script>
-
-
 </body>
-
 </html>
 
 
 
-<main class="product container">
+<main class="productos container">
 
     <h2>Todos los Productos</h2>
 
-    <div class="product-content">
+    <div class="productos-contenido">
 
-        <div class="product-1">
+        <div class="productos-item">
             <img src="imagenes/crema contorno de ojos.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Contorno de Ojos</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/producto1.webp" alt="">
-            <div class="product-txt">
+            <div class="producto-texto">
                 <h3>The Outset</h3>
-                <div class="price">
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
-        <div class="product-1">
-            <img src="imagenes/carrusel13.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+        <div class="producto-item">
+            <img src="imagenes/gel micelar.webp" alt="">
+            <div class="producto-texto">
+                <h3>Gel Micelar</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/promociones.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Promocion Navidad</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
@@ -126,13 +122,13 @@
 
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/Crema de noche reparadora con niacinamida.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Crema de noche reparadora con niacinamida</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
@@ -140,89 +136,89 @@
 
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/producto4.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>The Outset</h3> 
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/producto7.jpg" alt="">
-            <div class="product-txt">
+            <div class="producto-texto">
                 <h3>The Outset</h3>
-                <div class="price">
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/crema purificante azul.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Crema Purificante Azul</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/Hidratante diario nutritivo con escualano.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Hidratante diario nutritivo con escualano</h3>
+                <div class="proucto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/suero reafirmante vegano.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Suero Reafirmante Vegano</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/Crema de noche reparadora con niacinamida.webp" alt="">
-            <div class="product-txt">
-                <h3>The Outset</h3>
-                <div class="price">
+            <div class="producto-texto">
+                <h3>Crema de noche reparadora con niacinamida</h3>
+                <div class="producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
         </div>
 
 
-        <div class="product-1">
+        <div class="producto-item">
             <img src="imagenes/producto6.jpg" alt="">
-            <div class="product-txt">
+            <div class="producto-texto">
                 <h3>The Outset</h3>
-                <div class="price">
+                <div class=" producto-precio">
                     <p>$500</p>
-                    <a href="#" class="btn-2">Comprar</a>
+                    <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
 
