--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 <img src="imagenes/carrusel6.jpg" alt="Producto 6" class="carousel-image">
                 <img src="imagenes/carrusel7.webp" alt="Producto 7" class="carousel-image">
                 <img src="imagenes/carrusel3.webp" alt="producto8" class="carousel-image">
+                <img src="imagenes/carrusel1.jpg" alt="Producto 1" class="carousel-image">
+                <img src="imagenes/carrusel2.jpg" alt="Producto 2" class="carousel-image">
+                <img src="imagenes/carrusel4.webp" alt="Producto 3" class="carousel-image">
+                <img src="imagenes/carrusel90.jpg" alt="Producto 4" class="carousel-image">
+                <img src="imagenes/carrusel5.jpg" alt="Producto 5" class="carousel-image">
+                <img src="imagenes/carrusel6.jpg" alt="Producto 6" class="carousel-image">
+                <img src="imagenes/carrusel7.webp" alt="Producto 7" class="carousel-image">
+                <img src="imagenes/carrusel3.webp" alt="producto8" class="carousel-image">
             </div>
 
             <!-- Botón de navegación siguiente -->
@@ -69,9 +77,8 @@
     <h2>Todos los Productos</h2>
 
     <div class="productos-contenido">
-
-        <div class="productos-item">
-            <img src="imagenes/crema contorno de ojos.webp" alt="">
+        <div class="producto-item">
+            <img src="imagenes/crema contorno de ojos.webp" alt="Contorno de Ojos">
             <div class="producto-texto">
                 <h3>Contorno de Ojos</h3>
                 <div class="producto-precio">
@@ -79,7 +86,6 @@
                     <a href="#" class="btn-compra">Comprar</a>
                 </div>
             </div>
-
         </div>
 
         <div class="producto-item">
